@@ -58,11 +58,12 @@ sub mpu_public_regex {
       is_square_free is_primitive_root is_carmichael is_quasi_carmichael
       is_fundamental is_totient
       sqrtint rootint logint
+      powint mulint addint divint modint divrem tdivrem
       miller_rabin_random
       lucas_sequence lucasu lucasv
       primes twin_primes semi_primes ramanujan_primes
       sieve_prime_cluster sieve_range
-      lucky_numbers
+      lucky_numbers is_lucky nth_lucky
       forprimes forcomposites foroddcomposites forsemiprimes fordivisors
       forpart forcomp forcomb forperm forderange formultiperm forsetproduct
       forfactored forsquarefree
